# kairastra

./: .dockerignore  .gitignore  AGENTS.md  IMPLEMENTATION_STATUS.md  Makefile  NOTICE  README.md  REPORT.md  SPEC.md  WORKFLOW.md  codex.md  install.sh  logo.md  test.md
.agents/skills/kairastra-commit/: SKILL.md
.agents/skills/kairastra-debug/: SKILL.md
.agents/skills/kairastra-github/: SKILL.md
.agents/skills/kairastra-land/: SKILL.md  (+1 more)
.codex/: worktree_init.sh
.github/: pull_request_template.md
.github/workflows/: ci.yml  make-all.yml  pr-description-lint.yml  public-readiness-audit.yml
docs/: README.md  architecture.md  auth.md  deployment.md  operations.md  public-repo-readiness.md  troubleshooting.md  workflow-reference.md
docs/plans/: multi-provider-agent-support.md  superpowers-integration.md
rust/: .env.example  Cargo.toml  Dockerfile  LIVE_PROJECT_6_SMOKE.md  Makefile  README.md  WORKFLOW.md  compose.yml  docker-entrypoint.sh  docker-user-session.sh
rust/src/: app_server.rs  auth.rs  config.rs  deploy.rs  doctor.rs  envfile.rs  git_checkout.rs  github.rs  github_bootstrap.rs  github_mcp.rs  github_tools.rs  lib.rs  main.rs  model.rs  orchestrator.rs  prompt.rs  runner.rs  setup.rs  shared_skills.rs  webhook.rs  workflow.rs  workspace.rs
rust/src/agent/: backend.rs  codex.rs  events.rs  mod.rs
rust/src/providers/: mod.rs
rust/src/providers/claude/: auth.rs  config.rs  runtime.rs  setup.rs
rust/src/providers/codex/: auth.rs  config.rs  runtime.rs  setup.rs
rust/src/providers/gemini/: auth.rs  config.rs  mcp.rs  mod.rs  runtime.rs  setup.rs
scripts/: bootstrap_github_project.py  install-remote-docker.sh  public-readiness-audit.sh
(+5 files in other folders)
